fixed layout issues and displayed text

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,36 +13,26 @@ $break-laptop: 1200px;
     flex-direction: row;
 }
 
-.content-container {
-    display: grid;
-    grid-template-columns: 1rem auto 1rem;
-
-    div {
-        grid-column-start: 2;
-        grid-column-end: 3;
-    }
-}
-
 @media only screen and (max-width: $break-mobile) {
     .content-container {
-        width: 71vw;
+        width: 70vw;
     }
 }
 
 @media only screen and (min-width: $break-mobile) {
     .content-container {
-        width: 76vw;
+        width: 75vw;
     }
 }
 
 @media only screen and (min-width: $break-tablet-small) {
     .content-container {
-        width: 80vw;
+        width: 79vw;
     }
 }
 
 @media only screen and (min-width: $break-laptop) {
     .content-container {
-        width: 84vw;
+        width: 82vw;
     }
 }
