--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -10,12 +10,13 @@ $break-laptop: 1200px;
 @media only screen and (max-width: $break-mobile) {
     nav {
         width: 29vw;
-        height: 100vh;
+        height: 100vh !important;
         background: url("./navbg.png");
         background-repeat: repeat;
         position: -webkit-sticky;
         position: sticky;
         top: 0;
+        left: 0;
 
         ul {
             margin: 0;
@@ -23,7 +24,7 @@ $break-laptop: 1200px;
             grid-template-columns: 1fr;
             grid-template-rows: repeat(15, 1fr);
             justify-items: center;
-            min-height: 100%;
+            height: 100%;
             width: 100%;
             padding-left: 0;
 
@@ -94,12 +95,13 @@ $break-laptop: 1200px;
 @media only screen and (min-width: $break-mobile) {
     nav {
         width: 24vw;
-        height: 100vh;
+        height: 100vh !important;
         background: url("./navbg.png");
         background-repeat: repeat;
         position: -webkit-sticky;
         position: sticky;
         top: 0;
+        left: 0;
 
         ul {
             margin: 0;
